objects/Competitive_Sales_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity_Plan__r.Opportunity__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Buying_Potential__c</fullName>
        <formula>Opportunity_Plan__r.Combined_Buying_Potential__c</formula>
        <label>Combined Buying Potential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <formula>Competitors__r.Competitor_Account__r.Name</formula>
        <label>Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Competitors</label>
        <referenceTo>Competitors__c</referenceTo>
        <relationshipLabel>Competitive Sales Plans</relationshipLabel>
        <relationshipName>Competitive_Sales_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disengage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disengage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Close_Date__c</fullName>
        <formula>Opportunity_Plan__r.Opportunity__r.CloseDate</formula>
        <label>Est Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fractional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fractional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frontal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frontal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity_Plan__r.Opportunity__r.Id</formula>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan__c</fullName>
        <label>Opportunity Plan</label>
        <referenceTo>Opportunity_Plan__c</referenceTo>
        <relationshipLabel>Competitive Sales Plans</relationshipLabel>
        <relationshipName>Competitive_Sales_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Opportunity_Plan__r.Opportunity__r.Name</formula>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shame__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Silence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Silence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Slow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <formula>TEXT(Opportunity_Plan__r.Opportunity__r.HP_Solution__c)</formula>
        <label>Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <formula>&quot;Test&quot;</formula>
        <label>VP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTBO_CBP__c</fullName>
        <formula>Opportunity_Plan__r.WTBO_CBP__c</formula>
        <label>Will They Buy Ours?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTB_CBP__c</fullName>
        <formula>Opportunity_Plan__r.WTB_CBP__c</formula>
        <label>Will They Buy?</label>
        <type>Text</type>
    </fields>
    <label>Competitive Sales Plan</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Competive Sales Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Sales Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>